# jira-document-loader

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
jira_document_loader/src/: jira_loader.py
src/jira_document_loader/: __init__.py
